Trying to fix wrapping.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,7 +17,7 @@
     flex-wrap: nowrap;
 
     @include large {
-        max-width: 64rem;
+        max-width: 72rem;
         padding-left: 6rem;
         padding-right: 6rem;
         margin: 0 auto;
@@ -29,7 +29,7 @@
     }
 
     @include small {
-        min-width: 32 rem;
+        min-width: 40rem;
         padding-left: 1rem;
         padding-right: 1rem;
     }
@@ -58,7 +58,6 @@
     display: flex;
     flex-direction: column;
     text-align: right;
-    padding-left: 2rem;
 
     @include large {
         padding: 2rem 0rem;
@@ -71,10 +70,15 @@
     @include small {
         padding: 1rem 0rem;
     }
+
+    padding-left: 2rem;
 }
 
 .title-sidebar-inner {
-    display: initial;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
     white-space: nowrap;
 }
 
